# traBatchTEnc

./: .gitignore  Cargo.toml  README.md  build.rs  logfile_2025-08-24_04-17-00.txt  logfile_2026-04-19_16-56-23.txt  logfile_2026-04-19_16-58-54.txt  probtrace.sh  runscript.sh  runtrace.sh  ttbe_database.redb  ttbe_database_ete.redb
examples/: endtoend.rs  tracing.rs
src/: crsgen.rs  dealer.rs  decoder.rs  decryption.rs  encryption.rs  fincode.rs  keygen.rs  lib.rs  trace.rs  utils.rs
